# NFL

./: .gitignore  Cargo.toml  README.md
apps/nfl-bench/: Cargo.toml
apps/nfl-bench/src/: main.rs
apps/nfl-cli/: Cargo.toml
apps/nfl-cli/src/: main.rs
crates/nfl-arrow/: Cargo.toml
crates/nfl-arrow/src/: lib.rs  schema.rs
crates/nfl-core/: Cargo.toml
crates/nfl-core/src/: lib.rs
crates/nfl-format/: Cargo.toml
crates/nfl-format/benches/: layout_bench.rs
crates/nfl-format/src/: layout.rs  lib.rs
crates/nfl-index/: Cargo.toml
crates/nfl-index/src/: lib.rs
crates/nfl-io/: Cargo.toml
crates/nfl-io/src/: lib.rs
crates/nfl-mmap/: Cargo.toml
crates/nfl-mmap/src/: lib.rs  mmap.rs
crates/nfl-query/: Cargo.toml
crates/nfl-query/src/: lib.rs
crates/nfl-schema/: Cargo.toml
crates/nfl-schema/src/: lib.rs
crates/nfl-security/: Cargo.toml
crates/nfl-security/src/: lib.rs
crates/nfl-simd/: Cargo.toml
crates/nfl-simd/src/: lib.rs
crates/nfl-tensor/: Cargo.toml
crates/nfl-tensor/src/: lib.rs
crates/nfl-testing/: Cargo.toml
crates/nfl-testing/src/: lib.rs
crates/nfl-types/: Cargo.toml
crates/nfl-vector/: Cargo.toml
examples/: README.md
specs/benchmarks/: README.md  io-patterns.md  latency.md  scalability.md  throughput.md  vector-search.md
specs/format/: README.md  compatibility.md  file-layout.md  mmap-access.md  segment-directory.md  segment-layout.md
specs/rfcs/: 0001-format-architecture.md  0002-io-and-mmap-model.md  0003-vector-tensor-storage.md  0004-indexing-and-search.md  0005-security-integrity.md  README.md
(+2 files in other folders)
